# rz-pipe

./: .gitignore  README.md
.github/workflows/: ci.yml
go/: Makefile  README.md  go.mod  go.sum  native.go  rzpipe.go  rzpipe_native_test.go  rzpipe_test.go
go/example/: example.go  ps
haskell/: CHANGELOG.md  Example.hs  LICENSE  README.md  RzPipe.hs  example_rzpipe.hs  rz-pipe.cabal
haskell/RzPipe/: RzPipe.hs
ocaml/: .gitignore  README.md  dune  dune-project  rz-pipe.opam  rz.ml  rz.mli
python/: .gitignore  MANIFEST.in  Makefile  README.md  dbgtest.py  except.py  ipython.py  lang-pipe.py  requirements-dev.txt  setup.py
python/examples/: 010-to-rizin.py  batch.py  bug.py  ccall.py  libgraph.py  test-backends.py  test.py
python/examples/sync/: talkto.py
python/examples/syscall/: int.py  int.sh
python/rzpipe/: README.md  __init__.py  native.py  open_async.py  open_base.py  open_sync.py
python/tests/: native_test.py  open_base_test.py
ruby/: Makefile  README.md  rzpipe.rb
ruby/examples/: test.rb
rust/: Cargo.toml  Makefile  README.md
rust/examples/: Makefile  async.rs  http.rs  main.rs  quit.rs  tcp.rs  threads.rs  threads_callback.rs
rust/src/: errors.rs  lib.rs  rz.rs  rzpipe.rs
