cabal-version:       >=1.10

name:                rz-pipe
version:             0.1.0.0
synopsis:            Pipe interface for rizin
license-file:        LICENSE
author:              rizinorg
build-type:          Simple

library
  exposed-modules:     RzPipe
  other-modules:
  build-depends:       base >=4.12 && <5,
                       HTTP, aeson, process, bytestring
  default-language:    Haskell2010

executable example
  main-is:             example_rzpipe.hs 
--  other-modules:       RzPipe
  build-depends:       base >= 4.12 && <5,
                       rz-pipe, HTTP, aeson, process, bytestring

