cabal-version:       >=1.10

name:                rz-pipe
version:             0.1.0
synopsis:            Pipe interface for Rizin
category:            Reverse Engineering, Security
license:             MIT
license-file:        LICENSE
author:              rizinorg
maintainer:          Florian Märkl <rizin@metallic.software>
build-type:          Simple
description:
    rz-pipe is a scripting interface for the Rizin Reverse Engineering
    Framework that builds upon Rizin's command interface as a simple
    point of interaction.
    .
    It can be used by launching a Rizin instance from Haskell or
    connecting to an existing one using pipes or HTTP.

extra-source-files:
    README.md

library
  exposed-modules:     RzPipe
  hs-source-dirs:      RzPipe
  build-depends:       base >=4.12 && <5,
                       HTTP        >= 4000.3.15 && < 4000.4,
                       bytestring  >= 0.10.12 && < 0.11,
                       utf8-string >= 1.0.2 && < 1.1,
                       aeson       >= 1.5.5 && < 1.6,
                       process     >= 1.6.9 && < 1.7
  default-language:    Haskell2010

executable example
  main-is:             Example.hs
  build-depends:       base >=4.12 && <5,
                       rz-pipe,
                       aeson
  default-language:    Haskell2010
